# APIs

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  tarefas.db
.github/workflows/: python-app.yml
API Pokemon/: Dockerfile  README.md  compose.yaml  main.py  pokemons.db  pyproject.toml
API Pokemon/tests/: test_database.py  test_endpoint.py
Projeto Principal API Tarefas/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
